--- a/app/src/main/res/layout/activity_reminder_detail.xml
+++ b/app/src/main/res/layout/activity_reminder_detail.xml
@@ -211,13 +211,19 @@
             android:minHeight="48dp" />
     </TableRow>
 
-    <Button
-        android:id="@+id/btnReminderDetailDelete"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Xoa"
-        android:textSize="16sp"
-        android:backgroundTint="@color/primary"
-        android:textColor="@color/white"/>
+        android:layout_marginTop="20dp"
+        android:gravity="center">
+        <Button
+            android:id="@+id/btnReminderDetailDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="XÓA"
+            android:textSize="16sp"
+            android:backgroundTint="@color/primary"
+            android:textColor="@color/white"/>
+    </LinearLayout>
 
 </TableLayout>
