--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.Toolbar
-                android:id="@+id/addReminderToolbar"
+                android:id="@+id/addEventToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="48dp"
@@ -28,13 +28,13 @@
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <ImageButton
-                android:id="@+id/ibAddScheduleBack"
+                android:id="@+id/ibAddEventBack"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/white"
                 android:src="@drawable/back"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/addReminderToolbar"
+                app:layout_constraintStart_toStartOf="@+id/addEventToolbar"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
@@ -47,11 +47,11 @@
                 android:textColor="@color/text_dark"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/ibAddScheduleBack"
+                app:layout_constraintStart_toEndOf="@+id/ibAddEventBack"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                android:id="@+id/ibAddScheduleSave"
+                android:id="@+id/ibAddEventSave"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="8dp"
@@ -72,133 +72,6 @@
         android:background="@drawable/bottom_line">
 
         <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginHorizontal="12dp"
-            app:srcCompat="@drawable/alarm_black_24dp" />
-
-        <EditText
-            android:id="@+id/etAddScheduleName"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:ems="10"
-            android:textSize="18sp"
-            android:inputType="textPersonName"
-            android:text=""
-            android:layout_span="3"
-            android:textColor="@color/text_dark"
-            android:hint="Lich trinh ve"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/trAddScheduleDate"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:gravity="center_vertical"
-        android:background="@drawable/bottom_line">
-
-        <ImageView
-            android:id="@+id/ivIcon4"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginHorizontal="12dp"
-            app:srcCompat="@drawable/calendar_today_black_24dp" />
-
-        <TextView
-            android:id="@+id/tvAddScheduleDate"
-            android:layout_width="match_parent"
-            android:text=""
-            android:layout_span="3"
-            android:gravity="center_vertical"
-            android:paddingLeft="10sp"
-            android:textSize="18sp"
-            android:background="?android:attr/selectableItemBackground"
-            android:textColor="@color/text_dark"
-            android:layout_height="60dp" />
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/trAddScheduleTimeStart"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:gravity="center_vertical"
-        android:background="@drawable/bottom_line">
-
-        <ImageView
-            android:id="@+id/ivIcon2"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginHorizontal="12dp"
-            app:srcCompat="@drawable/schedule_black_24dp"/>
-
-        <TextView
-            android:id="@+id/tvAddScheduleTimeStart"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10sp"
-            android:text=""
-            android:layout_span="3"
-            android:background="?android:attr/selectableItemBackground"
-            android:textColor="@color/text_dark"
-            android:textSize="18sp" />
-
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/trAddScheduleTimeEnd"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:gravity="center_vertical"
-        android:background="@drawable/bottom_line">
-
-        <ImageView
-            android:id="@+id/ivIcon5"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginHorizontal="12dp"
-            app:srcCompat="@drawable/schedule_black_24dp"/>
-
-        <TextView
-            android:id="@+id/tvAddScheduleTimeEnd"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10sp"
-            android:text=""
-            android:layout_span="3"
-            android:background="?android:attr/selectableItemBackground"
-            android:textColor="@color/text_dark"
-            android:textSize="18sp" />
-
-    </TableRow>
-
-    <TableRow
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:gravity="center_vertical"
-        android:background="@drawable/bottom_line">
-        <Spinner
-            android:id="@+id/spnAddSchedule"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_span="3"
-            android:dropDownWidth="wrap_content"
-            android:spinnerMode="dropdown"
-            android:paddingEnd="0dp"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-    </TableRow>
-
-    <TableRow
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:gravity="center_vertical"
-        android:background="@drawable/bottom_line">
-
-        <ImageView
             android:id="@+id/imageView1"
             android:layout_width="32dp"
             android:layout_height="32dp"
@@ -206,7 +79,7 @@
             app:srcCompat="@drawable/alarm_black_24dp" />
 
         <EditText
-            android:id="@+id/etAddScheduleNote"
+            android:id="@+id/etAddEventName"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:ems="10"
@@ -215,7 +88,63 @@
             android:text=""
             android:layout_span="3"
             android:textColor="@color/text_dark"
-            android:hint="Ghi chu"
+            android:hint="Tên"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    </TableRow>
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:background="@drawable/bottom_line">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginHorizontal="12dp"
+            app:srcCompat="@drawable/alarm_black_24dp" />
+
+        <EditText
+            android:id="@+id/etAddEventLocation"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:ems="10"
+            android:textSize="18sp"
+            android:inputType="textPersonName"
+            android:text=""
+            android:layout_span="3"
+            android:textColor="@color/text_dark"
+            android:hint="Địa điểm"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    </TableRow>
+
+    <TableRow
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:background="@drawable/bottom_line">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginHorizontal="12dp"
+            app:srcCompat="@drawable/alarm_black_24dp" />
+
+        <EditText
+            android:id="@+id/etAddEventNote"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:ems="10"
+            android:textSize="18sp"
+            android:inputType="textPersonName"
+            android:text=""
+            android:layout_span="3"
+            android:textColor="@color/text_dark"
+            android:hint="Ghi chú"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
     </TableRow>
 </TableLayout>
